--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react-native-image-crop-picker": "^0.36.2",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.2.0"
+    "react-native-screens": "^3.2.0",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
