--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value="AIzaSyBTkvd2Z5lVZppuQwOyIvqD1kDw47HQ_Hk"/>
+      <!-- You will also only need to add this uses-library tag -->
+    <uses-library android:name="org.apache.http.legacy" 
+                  android:required="false"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
