--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-native": "0.64.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.36.2",
+    "react-native-image-slider-box": "^1.0.12",
+    "react-native-maps": "0.28.0",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
