--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,6 +10,8 @@ buildscript {
         supportLibVersion   = "29.0.3"
         playServicesVersion = "17.0.0" // or find latest version
         androidMapsUtilsVersion = "2.2.3" 
+
+        firebaseMessagingVersion = "21.1.0" // default: "+"
     }
     repositories {
         google()
@@ -19,6 +21,7 @@ buildscript {
         classpath("com.android.tools.build:gradle:4.1.0")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+         classpath 'com.google.gms:google-services:4.3.8'
     }
 }
 
